[package]
name = "bls24-curves"
version = "0.1.0"
edition = "2024"
authors = ["Paulo L. Barreto"]
license = "MIT OR Apache-2.0"
description = "A pure Rust framework for pairing-based cryptography using BLS24 curves"
readme = "README.md"
homepage = "https://github.com/pbarreto-crypto"
repository = "https://github.com/pbarreto-crypto/bls24-curves"
keywords = ["bilinear-pairings", "BLS-curves", "BLS24-curves"]
categories = ["algorithms", "cryptography"]

[dependencies]
crypto-bigint = { version = "=0.7.0-rc.6", features = ["alloc"] }
rand = "0.9.2"
sha3 = "=0.11.0-rc.3"

[[bin]]
name = "bls24paramgen"

[[example]]
name = "bgls"

[[example]]
name = "blmq"

[lib]
